update: Change database credentials to webuser/StrongPassword123!

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # Database Configuration for Railway
 DB_HOST=tramway.proxy.rlwy.net
-DB_USER=root
-DB_PASSWORD=rPeBrVHNVzUNCmXjnPWckHoiQWwvJtrr
+DB_USER=webuser
+DB_PASSWORD=StrongPassword123!
 DB_NAME=railway
 DB_PORT=37355
 
@@ -9,4 +9,4 @@ DB_PORT=37355
 SESSION_SECRET=pickleball_secret_key_2024
 
 # Server Port
-PORT=3000 
+PORT=3000
